fix: adds z-index to navbar to prevent absolute items being in front

--- a/src/components/BookStore/NavBar/NavBar.module.scss
+++ b/src/components/BookStore/NavBar/NavBar.module.scss
@@ -32,6 +32,7 @@ nav {
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  z-index: 2;
 }
 
 @media screen and (max-width: 800px) {
